# Acorn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PLAN.md  README.md  SECURITY.md  evaluation_report.md  pyproject.toml  strategic_recommendation.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/acorn/: action.yml
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
Formula/: acorn.rb
src/acorn/: __main__.py  _compat.py  analyzer.py  check_update.py  cli.py  composer.py  config.py  detector.py  format.py  i18n.py  json_output.py  log.py  marketplace.py  models.py  plugins.py  progress.py  security.py  telemetry.py  template_engine.py  wizard.py
src/acorn/analysis/: ast_lite.py  detector.py  health.py  health_rules.py  insights.py
src/acorn/commands/: admin.py  analyze_cmd.py  clean.py  docker.py  doctor.py  fix.py  generate.py  marketplace.py  sync.py  template_cmd.py
src/acorn/detectors/: bun.yaml  deno.yaml  go.yaml  java.yaml  node.yaml  php.yaml  python.yaml  ruby.yaml  rust.yaml
src/acorn/generators/: builtin.py
src/acorn/locales/: en.yaml  zh.yaml
src/acorn/templates/bun-app/: Dockerfile  docker-compose.yml  template.yaml
tests/: conftest.py  test_analyzer.py  test_ast_lite.py  test_builtin.py  test_check_update.py  test_clean.py  test_cli.py  test_composer.py  test_config.py  test_detector.py  test_doctor.py  test_fix.py  test_github_action.py  test_i18n.py  test_json_output.py  test_log.py  test_main.py  test_marketplace.py  test_models.py  test_npx_wrapper.py  test_plugins.py  test_progress.py  test_security.py  test_sync.py  test_telemetry.py  test_template_engine.py  test_version_check.py  test_wizard.py  test_wizard_and_tools.py
tests/fixtures/node-project/: package.json  server.js
tests/fixtures/python-project/: pyproject.toml
tests/fixtures/unsafe-project/: .env  Dockerfile
(+35 files in other folders)
