[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acorn"
version = "0.1.0"
description = "智能项目初始化工具 - 自动检测项目类型、匹配模板、生成配置"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "acorn contributors" },
]
maintainers = [
    { name = "acorn contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
keywords = ["init", "project", "scaffold", "template", "docker", "devcontainer"]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/SilasFu/Acorn"
Repository = "https://github.com/SilasFu/Acorn"
Documentation = "https://github.com/SilasFu/Acorn"
Issues = "https://github.com/SilasFu/Acorn/issues"

[project.scripts]
acorn = "acorn.cli:main"

[project.optional-dependencies]
color = ["colorama"]
network = ["requests"]
advanced = ["jinja2"]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/acorn"]

[tool.hatch.build.targets.sdist]
include = [
    "src/acorn/**",
    "tests/**",
    "README.md",
    "pyproject.toml",
]

[tool.coverage.run]
source = ["src/acorn"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
